# Remix-Autopilot

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/application/: mod.rs
src/domain/: commit.rs  diff.rs  intent.rs  mod.rs  settings.rs
src/infrastructure/: config.rs  dependencies.rs  git.rs  github.rs  llm.rs  mod.rs  ollama.rs  secrets.rs
src/ui/: mod.rs  render.rs  state.rs
