[package]
name = "remix-autopilot"
version = "0.1.0-beta"
edition = "2024"

[[bin]]
name = "autopilot"
path = "src/main.rs"

[dependencies]
arboard = "3.6"
crossterm = "0.29"
dirs = "6.0"
keyring = { version = "4.1.1", default-features = false, features = ["v1", "apple-native-keyring-store", "linux-keyutils-keyring-store", "windows-native-keyring-store"] }
ratatui = "0.30.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["io-util", "macros", "process", "rt-multi-thread"] }
unicode-width = "0.2.2"

[dev-dependencies]
tempfile = "3.27"
